# SFML_CMAKE_SETUP

./: CMakeLists.txt  README.md  main.cpp
